--- a/about/index.html
+++ b/about/index.html
@@ -31,6 +31,10 @@ Current   Student at Cluster Innovation Centre, University of Delhi pursuing Bac
 <link rel="stylesheet" href="/main.min.5dcefbf8102eb536dd3e2de53ffebfa58599ab2435c241a0db81728a5e015f2e.css">
 
 
+    
+        <link rel="stylesheet" type="text/css" href="/style.css">
+    
+
 
 
 <meta itemprop="name" content="About">
@@ -130,7 +134,7 @@ Current   Student at Cluster Innovation Centre, University of Delhi pursuing Bac
 <p>Experienced with multiple programming languages including C++, JAVA, C, C# but majorly inclined towards using <strong>Python</strong>. Machine Learning beginner with interests in Artificial Intelligence. Passionate for <strong>teaching</strong> higher mathematics and <strong>programming</strong>.</p>
 <p>A good representation of my current interests in development:</p>
 
-    <img src="http://ghchart.rshah.org/8510d8/yashlamba"  alt="Github Graph"  class="left"  />
+    <img src="http://ghchart.rshah.org/099FFF/yashlamba"  alt="Github Graph"  class="left"  />
 
 
 <h3 id="current">Current</h3>
@@ -199,6 +203,14 @@ Current   Student at Cluster Innovation Centre, University of Delhi pursuing Bac
 
 
 <script type="text/javascript" src="/bundle.min.2d5469329143160ae2456a69c3c76dc2d0a3b212b46afe291a51bd68650ed6f8697e001dab54f1c272c77ce08092a8c55e5bb4314e0ee334aab4b927ec896638.js" integrity="sha512-LVRpMpFDFgriRWppw8dtwtCjshK0av4pGlG9aGUO1vhpfgAdq1TxwnLHfOCAkqjFXlu0MU4O4zSqtLkn7IlmOA=="></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-154810488-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
 
 
